--- a/.github/workflows/be.yml
+++ b/.github/workflows/be.yml
@@ -24,7 +24,8 @@ jobs:
       - name: SAM Deploy
         uses: TractorZoom/sam-cli-action@master
         with:
-          sam_command: "deploy -t ./backend/template.yaml"
+          sam_command: "deploy -t ./backend/template.yaml \
+            --confirm-changeset"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
