--- a/.github/workflows/be.yml
+++ b/.github/workflows/be.yml
@@ -25,7 +25,8 @@ jobs:
         uses: TractorZoom/sam-cli-action@master
         with:
           sam_command: "deploy -t ./backend/template.yaml \
-            --confirm-changeset"
+            --no-confirm-changeset \
+            --no-fail-on-empty-changeset"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
