--- a/.github/workflows/fe.yml
+++ b/.github/workflows/fe.yml
@@ -16,4 +16,4 @@ jobs:
         run: aws s3 sync ./frontend s3://tvq-cloud-resume-challenge/ --delete --exclude ".git*"
 
       - name: Invalidate CloudFront cache
-        run: aws cloudfront create-invalidation --distribution-id E11QW2ELY79F85 --paths "/"
+        run: aws cloudfront create-invalidation --distribution-id E11QW2ELY79F85 --paths "/*"
